--- a/index.html
+++ b/index.html
@@ -43,22 +43,22 @@
 		<div class='row'>
 			<div class='col-sm-6'>
 				<h1 class="display-1">Welcome Back!</h1>
-				<form action="/login" method="post">
+				<form action="/operations/login.php" method="post">
 					<div class="form-group">
 					  <label for="email">Email</label>
 					  <input type="text" name="email" id="email" class="form-control" placeholder="Email" aria-describedby="helpId">
 					</div>
 					<div class="form-group">
 						<label for="password">Password</label>
-						<input type="text" name="password" id="password" class="form-control" placeholder="Password" aria-describedby="helpId">
+						<input type="password" name="password" id="password" class="form-control" placeholder="Password" aria-describedby="helpId">
 					</div>
-					<button type="button" class="btn btn-primary">Login</button>
+					<button type="submit" class="btn btn-primary">Login</button>
 				</form>
 
 			</div>
 			<div class='col-sm-6'>
 				<h1 class="display-1">Hello There!</h1>
-				<form action="register" method="post">
+				<form action="operations/register.php" method="post">
 					<div class="form-group">
 					  <label for="firstname">First Name</label>
 					  <input type="text" name="firstname" id="firstname" class="form-control" placeholder="First Name" aria-describedby="helpId">
@@ -75,7 +75,7 @@
 					  <label for="password">Password</label>
 					  <input type="password" name="password" id="password" class="form-control" placeholder="Password" aria-describedby="">
 					</div>
-					<button type="button" class="btn btn-primary">Register</button>
+					<button type="submit" class="btn btn-primary">Register</button>
 				</form>
 
 			</div>
